# copilot-session01

./: .gitignore  README.md
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: auth.py  main.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  auth.js  index.css
frontend/src/components/: ProtectedRoute.jsx
frontend/src/pages/: LoginPage.jsx  WelcomePage.jsx
